# Apple-Eloquence-ELF-test

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: android-build.yml  release.yml
android/: .gitignore  README.md
android/app/: build.gradle.kts
android/app/src/main/jniLibs/x86_64/: .gitignore
docs/: 04-internals.md
macho2elf/: macho2elf.py
tools/: dump_chained_fixups.py
